--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "next-cloudinary": "^6.16.0",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
